WriteBatchExecutor doesn't handle PageFaultException during inserts.

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Blocker - P1
    • 2.6.0-rc2
    • Affects Version/s: 2.6.0-rc1
    • Component/s: Write Ops
    • None
    • ALL
    • Hide

      Reliably fails the small oplog jsCore with write commands suite on Windows DEBUG builders.

      Show
      Reliably fails the small oplog jsCore with write commands suite on Windows DEBUG builders.
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      All db record accesses that occur while a PageFaultRetryableSection is instantiated on a thread's stack must be wrapped in an exception handler for PageFaultException. WriteBatchExecutor::execInserts violates this rule, allowing PFE to escape up the stack, leading to server aborts when records are determined to not be in memory.

      Correct use of PFRS is as follows:

      bool done = false;
      PageFaultRetryableSection pFaultSection;
      while (!done) {
          try {
              DB*Lock myLock(dbname);
              // Do all operations involving record access here.
              ...
              done = true;
          }
          catch (const PageFaultException& pfe) {
              pfe.touch();
          }
      }
      

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Andy Schwerin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: