src/mongo/db/commands/write_commands/batch_executor.cpp
@@ -60,6 +60,29 @@
 
 namespace mongo {
 
+    namespace {
+
+        /**
+         * Data structure to safely hold and clean up results of single write operations.
+         */
+        class WriteOpResult {
+            MONGO_DISALLOW_COPYING(WriteOpResult);
+        public:
+            WriteOpResult() {}
+
+            WriteOpStats& getStats() { return _stats; }
+
+            WriteErrorDetail* getError() { return _error.get(); }
+            WriteErrorDetail* releaseError() { return _error.release(); }
+            void setError(WriteErrorDetail* error) { _error.reset(error); }
+
+        private:
+            WriteOpStats _stats;
+            std::auto_ptr<WriteErrorDetail> _error;
+        };
+
+    }  // namespace
+
     // TODO: Determine queueing behavior we want here
     MONGO_EXPORT_SERVER_PARAMETER( queueForMigrationCommit, bool, true );
 
@@ -317,12 +340,10 @@ namespace mongo {
 
             if ( upserted.size() ) {
                 response->setUpsertDetails( upserted );
-                upserted.clear();
             }
 
             if ( writeErrors.size() ) {
                 response->setErrDetails( writeErrors );
-                writeErrors.clear();
             }
 
             if ( wcError.get() ) {
@@ -378,9 +399,9 @@ namespace mongo {
         error->setErrMessage( errMsg );
     }
 
-    static bool checkShardVersion( ShardingState* shardingState,
-                                   const BatchedCommandRequest& request,
-                                   WriteErrorDetail** error ) {
+    static bool checkShardVersion(ShardingState* shardingState,
+                                  const BatchedCommandRequest& request,
+                                  WriteOpResult* result) {
 
         const NamespaceString nss( request.getTargetingNS() );
         Lock::assertWriteLocked( nss.ns() );
@@ -399,8 +420,8 @@ namespace mongo {
                     metadata ? metadata->getShardVersion() : ChunkVersion::UNSHARDED();
 
                 if ( !requestShardVersion.isWriteCompatibleWith( shardVersion ) ) {
-                    *error = new WriteErrorDetail;
-                    buildStaleError( requestShardVersion, shardVersion, *error );
+                    result->setError(new WriteErrorDetail);
+                    buildStaleError(requestShardVersion, shardVersion, result->getError());
                     return false;
                 }
             }
@@ -409,12 +430,12 @@ namespace mongo {
         return true;
     }
 
-    static bool checkIsMasterForCollection(const NamespaceString& ns, WriteErrorDetail** error) {
-        if (!isMasterNs(ns.ns().c_str())) {
-            WriteErrorDetail* errorDetail = *error = new WriteErrorDetail;
+    static bool checkIsMasterForCollection(const std::string& ns, WriteOpResult* result) {
+        if (!isMasterNs(ns.c_str())) {
+            WriteErrorDetail* errorDetail = new WriteErrorDetail;
+            result->setError(errorDetail);
             errorDetail->setErrCode(ErrorCodes::NotMaster);
-            errorDetail->setErrMessage(std::string(mongoutils::str::stream() <<
-                                                   "Not primary while writing to " << ns.ns()));
+            errorDetail->setErrMessage("Not primary while writing to " + ns);
             return false;
         }
         return true;
@@ -429,9 +450,9 @@ namespace mongo {
         error->setErrMessage( errMsg );
     }
 
-    static bool checkIndexConstraints( ShardingState* shardingState,
-                                       const BatchedCommandRequest& request,
-                                       WriteErrorDetail** error ) {
+    static bool checkIndexConstraints(ShardingState* shardingState,
+                                      const BatchedCommandRequest& request,
+                                      WriteOpResult* result) {
 
         const NamespaceString nss( request.getTargetingNS() );
         Lock::assertWriteLocked( nss.ns() );
@@ -447,10 +468,10 @@ namespace mongo {
                 if ( !isUniqueIndexCompatible( metadata->getKeyPattern(),
                                                request.getIndexKeyPattern() ) ) {
 
-                    *error = new WriteErrorDetail;
-                    buildUniqueIndexError( metadata->getKeyPattern(),
-                                           request.getIndexKeyPattern(),
-                                           *error );
+                    result->setError(new WriteErrorDetail);
+                    buildUniqueIndexError(metadata->getKeyPattern(),
+                                          request.getIndexKeyPattern(),
+                                          result->getError());
 
                     return false;
                 }
@@ -484,6 +505,7 @@ namespace mongo {
         if ( currWrite.getOpType() == BatchedCommandRequest::BatchType_Insert ) {
             currentOp->setQuery( currWrite.getDocument() );
             currentOp->debug().query = currWrite.getDocument();
+            currentOp->debug().ninserted = 0;
         }
         else if ( currWrite.getOpType() == BatchedCommandRequest::BatchType_Update ) {
             currentOp->setQuery( currWrite.getUpdate()->getQuery() );
@@ -588,56 +610,11 @@ namespace mongo {
     // - error
     //
 
-    namespace {
-
-        /**
-         * Data structure to safely hold and clean up results of single write operations.
-         */
-        struct WriteOpResult {
-
-            WriteOpResult() :
-                fault( NULL ), error( NULL ) {
-            }
-
-            ~WriteOpResult() {
-                dassert( !( fault && error ) );
-                reset();
-            }
-
-            WriteErrorDetail* releaseError() {
-                WriteErrorDetail* released = error;
-                error = NULL;
-                return released;
-            }
-
-            void reset() {
-                if ( fault )
-                    delete fault;
-                if ( error )
-                    delete error;
-
-                fault = NULL;
-                error = NULL;
-
-                stats.reset();
-            }
-
-            WriteOpStats stats;
-
-            // Only one of these may be set at once
-            PageFaultException* fault;
-            WriteErrorDetail* error;
-        };
-
-    }
-
-    static void singleInsert( const BatchItemRef& insertItem,
-                              const BSONObj& normalInsert,
+    static void singleInsert( const BSONObj& docToInsert,
                               Collection* collection,
                               WriteOpResult* result );
 
-    static void singleCreateIndex( const BatchItemRef& insertItem,
-                                   const BSONObj& normalInsert,
+    static void singleCreateIndex( const BSONObj& indexDesc,
                                    Collection* collection,
                                    WriteOpResult* result );
 
@@ -648,10 +625,78 @@ namespace mongo {
 
     //
     // WRITE EXECUTION
-    // In general, the execXXX operations manage db lock state and stats before dispatching to the
+    // In general, the exec* operations manage db lock state and stats before dispatching to the
     // core write operations, which are *only* responsible for performing a write and reporting
     // success or failure.
     //
+
+    /**
+     * Representation of the execution state of execInserts.  Used by a single
+     * execution of execInserts in a single thread.
+     */
+    class WriteBatchExecutor::ExecInsertsState {
+        MONGO_DISALLOW_COPYING(ExecInsertsState);
+    public:
+        /**
+         * Constructs a new instance, for performing inserts described in "aRequest".
+         */
+        explicit ExecInsertsState(const BatchedCommandRequest* aRequest);
+
+        /**
+         * Acquires the write lock and client context needed to perform the current write operation.
+         * Returns true on success, after which it is safe to use the "context" and "collection"
+         * members.  It is safe to call this function if this instance already holds the write lock.
+         *
+         * On failure, writeLock, context and collection will be NULL/clear.
+         */
+        bool lockAndCheck(WriteOpResult* result);
+
+        /**
+         * Releases the client context and write lock acquired by lockAndCheck.  Safe to call
+         * regardless of whether or not this state object currently owns the lock.
+         */
+        void unlock();
+
+        /**
+         * Returns true if this executor has the lock on the target database.
+         */
+        bool hasLock() { return _writeLock.get(); }
+
+        /**
+         * Gets the lock-holding object.  Only valid if hasLock().
+         */
+        Lock::DBWrite& getLock() { return *_writeLock; }
+
+        /**
+         * Gets the target collection for the batch operation.  Value is undefined
+         * unless hasLock() is true.
+         */
+        Collection* getCollection() { return _collection; }
+
+        // Request object describing the inserts.
+        const BatchedCommandRequest* request;
+
+        // Index of the current insert operation to perform.
+        size_t currIndex;
+
+        // Translation of insert documents in "request" into insert-ready forms.  This vector has a
+        // correspondence with elements of the "request", and "currIndex" is used to
+        // index both.
+        std::vector<StatusWith<BSONObj> > normalizedInserts;
+
+    private:
+        bool _lockAndCheckImpl(WriteOpResult* result);
+
+        // Guard object for the write lock on the target database.
+        scoped_ptr<Lock::DBWrite> _writeLock;
+
+        // Context object on the target database.  Must appear after writeLock, so that it is
+        // destroyed in proper order.
+        scoped_ptr<Client::Context> _context;
+
+        // Target collection.
+        Collection* _collection;
+    };
 
     void WriteBatchExecutor::bulkExecute( const BatchedCommandRequest& request,
                                           std::vector<BatchedUpsertDetail*>* upsertedIds,
@@ -713,12 +758,13 @@ namespace mongo {
 
     // Goes over the request and preprocesses normalized versions of all the inserts in the request
     static void normalizeInserts( const BatchedCommandRequest& request,
-                                  vector<StatusWith<BSONObj> >* normalInserts ) {
+                                  vector<StatusWith<BSONObj> >* normalizedInserts ) {
 
+        normalizedInserts->reserve(request.sizeWriteOps());
         for ( size_t i = 0; i < request.sizeWriteOps(); ++i ) {
             BSONObj insertDoc = request.getInsertRequest()->getDocumentsAt( i );
             StatusWith<BSONObj> normalInsert = fixDocumentForInsert( insertDoc );
-            normalInserts->push_back( normalInsert );
+            normalizedInserts->push_back( normalInsert );
             if ( request.getOrdered() && !normalInsert.isOK() )
                 break;
         }
@@ -727,189 +773,54 @@ namespace mongo {
     void WriteBatchExecutor::execInserts( const BatchedCommandRequest& request,
                                           std::vector<WriteErrorDetail*>* errors ) {
 
-        // Bulk insert is a bit different from other bulk operations in that multiple request docs
-        // can be processed at once inside the write lock.
+        // Theory of operation:
+        //
+        // Instantiates an ExecInsertsState, which represents all of the state involved in the batch
+        // insert execution algorithm.  Most importantly, encapsulates the lock state.
+        //
+        // Every iteration of the loop in execInserts() processes one document insertion, by calling
+        // insertOne() exactly once for a given value of state.currIndex.
+        //
+        // If the ExecInsertsState indicates that the requisite write locks are not held, insertOne
+        // acquires them and performs lock-acquisition-time checks.  However, on non-error
+        // execution, it does not release the locks.  Therefore, the yielding logic in the while
+        // loop in execInserts() is solely responsible for lock release in the non-error case.
+        //
+        // Internally, insertOne loops performing the single insert until it completes without a
+        // PageFaultException, or until it fails with some kind of error.  Errors are mostly
+        // propagated via the request->error field, but DBExceptions or std::exceptions may escape,
+        // particularly on operation interruption.  These kinds of errors necessarily prevent
+        // further insertOne calls, and stop the batch.  As a result, the only expected source of
+        // such exceptions are interruptions.
+        ExecInsertsState state(&request);
+        normalizeInserts(request, &state.normalizedInserts);
+        for (state.currIndex = 0;
+             state.currIndex < state.request->sizeWriteOps();
+             ++state.currIndex) {
 
-        const NamespaceString nss( request.getTargetingNS() );
-        scoped_ptr<BatchItemRef> currInsertItem( new BatchItemRef( &request, 0 ) );
+            if (state.currIndex > 0) {
+                // Consider yielding between inserts.
 
-        // Go through our request and do some preprocessing on insert documents outside the lock to
-        // validate and put them in a normalized form - i.e. put _id in front and fill in
-        // timestamps.  The insert document may also be invalid.
-        // TODO:  Might be more efficient to do in batches.
-        vector<StatusWith<BSONObj> > normalInserts;
-        normalizeInserts( request, &normalInserts );
-
-        while ( currInsertItem->getItemIndex() < static_cast<int>( request.sizeWriteOps() ) ) {
-
-            WriteOpResult currResult;
-
-            // Don't (re-)acquire locks and create database until it's necessary
-            if ( !normalInserts[currInsertItem->getItemIndex()].isOK() ) {
-                currResult.error =
-                    toWriteError( normalInserts[currInsertItem->getItemIndex()].getStatus() );
-            }
-            else {
-
-                PageFaultRetryableSection pFaultSection;
-
-                ////////////////////////////////////
-                Lock::DBWrite writeLock( nss.ns() );
-                ////////////////////////////////////
-
-                // Check version inside of write lock
-
-                if ( checkIsMasterForCollection( nss, &currResult.error )
-                     && checkShardVersion( &shardingState, request, &currResult.error )
-                     && checkIndexConstraints( &shardingState, request, &currResult.error ) ) {
-
-                    //
-                    // Get the collection for the insert
-                    //
-
-                    scoped_ptr<Client::Context> writeContext;
-                    Collection* collection = NULL;
-
-                    try {
-                        // Context once we're locked, to set more details in currentOp()
-                        // TODO: better constructor?
-                        writeContext.reset( new Client::Context( request.getNS(),
-                                                                 storageGlobalParams.dbpath,
-                                                                 false /* don't check version */) );
-
-                        Database* database = writeContext->db();
-                        dassert( database );
-                        collection = database->getCollection( nss.ns() );
-
-                        if ( !collection ) {
-                            // Implicitly create if it doesn't exist
-                            collection = database->createCollection( nss.ns() );
-                            if ( !collection ) {
-                                currResult.error =
-                                    toWriteError( Status( ErrorCodes::InternalError,
-                                                          "could not create collection" ) );
-                            }
-                        }
-                    }
-                    catch ( const DBException& ex ) {
-                        Status status(ex.toStatus());
-                        if (ErrorCodes::isInterruption(status.code())) {
-                            throw;
-                        }
-                        currResult.error = toWriteError(status);
-                    }
-
-                    //
-                    // Perform writes inside write lock
-                    //
-
-                    while ( collection
-                            && currInsertItem->getItemIndex()
-                               < static_cast<int>( request.sizeWriteOps() ) ) {
-
-                        //
-                        // BEGIN CURRENT OP
-                        //
-
-                        scoped_ptr<CurOp> currentOp( beginCurrentOp( _client, *currInsertItem ) );
-                        incOpStats( *currInsertItem ); 
-
-                        // Get the actual document we want to write, assuming it's valid
-                        const StatusWith<BSONObj>& normalInsert = //
-                            normalInserts[currInsertItem->getItemIndex()];
-
-                        const BSONObj& normalInsertDoc =
-                            normalInsert.getValue().isEmpty() ?
-                                currInsertItem->getDocument() : normalInsert.getValue();
-
-                        if ( !normalInsert.isOK() ) {
-                            // This insert failed on preprocessing
-                            currResult.error = toWriteError( normalInsert.getStatus() );
-                        }
-                        else if ( !request.isInsertIndexRequest() ) {
-                            // Try the insert
-                            singleInsert( *currInsertItem,
-                                          normalInsertDoc,
-                                          collection,
-                                          &currResult );
-                        }
-                        else {
-                            // Try the create index
-                            singleCreateIndex( *currInsertItem,
-                                               normalInsertDoc,
-                                               collection,
-                                               &currResult );
-                        }
-
-                        //
-                        // END CURRENT OP
-                        //
-
-                        finishCurrentOp( _client, currentOp.get(), currResult.error );
-  
-                        // Faults release the write lock
-                        if ( currResult.fault )
-                            break;
-
-                        // In general, we might have stats and errors
-                        incWriteStats( *currInsertItem,
-                                       currResult.stats,
-                                       currResult.error,
-                                       currentOp.get() );
-
-                        // Errors release the write lock
-                        if ( currResult.error )
-                            break;
-
-                        // Increment in the write lock and reset the stats for next time
-                        currInsertItem.reset( new BatchItemRef( &request,
-                                                                currInsertItem->getItemIndex()
-                                                                + 1 ) );
-                        currResult.reset();
-
-                        // Destruct curop so that our parent curop is restored, so that we
-                        // record the yield count in the parent.
-                        currentOp.reset(NULL);
-
-                        // yield sometimes
-                        int micros = ClientCursor::suggestYieldMicros();
-                        if (micros > 0) {
-                            ClientCursor::staticYield(micros, "", NULL);
-                        }
+                if (state.hasLock()) {
+                    int micros = ClientCursor::suggestYieldMicros();
+                    if (micros > 0) {
+                        state.unlock();
+                        killCurrentOp.checkForInterrupt();
+                        sleepmicros(micros);
                     }
                 }
-
-            } // END WRITE LOCK
-
-            //
-            // Store the current error if it exists
-            //
-
-            if ( currResult.error ) {
-
-                errors->push_back( currResult.releaseError() );
-                errors->back()->setIndex( currInsertItem->getItemIndex() );
-
-                // Break early for ordered batches
-                if ( request.getOrdered() )
-                    break;
+                killCurrentOp.checkForInterrupt();
             }
 
-            //
-            // Fault or increment
-            //
-
-            if ( currResult.fault ) {
-                // Check page fault out of lock
-                currResult.fault->touch();
-            }
-            else {
-                // Increment if not a fault
-                currInsertItem.reset( new BatchItemRef( &request,
-                                                        currInsertItem->getItemIndex() + 1 ) );
+            WriteErrorDetail* error = NULL;
+            execOneInsert(&state, &error);
+            if (error) {
+                errors->push_back(error);
+                error->setIndex(state.currIndex);
+                if (request.getOrdered())
+                    return;
             }
         }
-
     }
 
     void WriteBatchExecutor::execUpdate( const BatchItemRef& updateItem,
@@ -922,17 +833,17 @@ namespace mongo {
 
         WriteOpResult result;
         multiUpdate( updateItem, &result );
-        incWriteStats( updateItem, result.stats, result.error, currentOp.get() );
 
-        if ( !result.stats.upsertedID.isEmpty() ) {
-            *upsertedId = result.stats.upsertedID;
+        if ( !result.getStats().upsertedID.isEmpty() ) {
+            *upsertedId = result.getStats().upsertedID;
         }
 
         // END CURRENT OP
-        finishCurrentOp( _client, currentOp.get(), result.error );
+        incWriteStats( updateItem, result.getStats(), result.getError(), currentOp.get() );
+        finishCurrentOp( _client, currentOp.get(), result.getError() );
 
-        if ( result.error ) {
-            result.error->setIndex( updateItem.getItemIndex() );
+        if ( result.getError() ) {
+            result.getError()->setIndex( updateItem.getItemIndex() );
             *error = result.releaseError();
         }
     }
@@ -948,28 +859,27 @@ namespace mongo {
 
         WriteOpResult result;
 
+        // NOTE: Deletes will not fault outside the lock once any data has been written
+        PageFaultRetryableSection pageFaultSection;
         while ( true ) {
-            multiRemove( removeItem, &result );
-
-            if ( !result.fault ) {
-                incWriteStats( removeItem, result.stats, result.error, currentOp.get() );
+            try {
+                multiRemove( removeItem, &result );
                 break;
             }
-
-            //
-            // Check page fault out of lock
-            //
-
-            dassert( result.fault );
-            result.fault->touch();
-            result.reset();
+            catch (PageFaultException& pfe) {
+                pfe.touch();
+                invariant(!result.getError());
+                continue;
+            }
+            fassertFailed(0);
         }
 
         // END CURRENT OP
-        finishCurrentOp( _client, currentOp.get(), result.error );
+        incWriteStats( removeItem, result.getStats(), result.getError(), currentOp.get() );
+        finishCurrentOp( _client, currentOp.get(), result.getError() );
 
-        if ( result.error ) {
-            result.error->setIndex( removeItem.getItemIndex() );
+        if ( result.getError() ) {
+            result.getError()->setIndex( removeItem.getItemIndex() );
             *error = result.releaseError();
         }
     }
@@ -978,47 +888,162 @@ namespace mongo {
     // IN-DB-LOCK CORE OPERATIONS
     //
 
+    WriteBatchExecutor::ExecInsertsState::ExecInsertsState(const BatchedCommandRequest* aRequest) :
+        request(aRequest),
+        currIndex(0),
+        _collection(NULL) {
+    }
+
+    bool WriteBatchExecutor::ExecInsertsState::_lockAndCheckImpl(WriteOpResult* result) {
+        if (hasLock()) {
+            cc().curop()->enter(_context.get());
+            return true;
+        }
+
+        invariant(!_context.get());
+        _writeLock.reset(new Lock::DBWrite(request->getNS()));
+        if (!checkIsMasterForCollection(request->getNS(), result)) {
+            return false;
+        }
+        if (!checkShardVersion(&shardingState, *request, result)) {
+            return false;
+        }
+        if (!checkIndexConstraints(&shardingState, *request, result)) {
+            return false;
+        }
+        _context.reset(new Client::Context(request->getNS(),
+                                           storageGlobalParams.dbpath,
+                                           false /* don't check version */));
+        Database* database = _context->db();
+        dassert(database);
+        _collection = database->getCollection(request->getTargetingNS());
+        if (!_collection) {
+            // Implicitly create if it doesn't exist
+            _collection = database->createCollection(request->getTargetingNS());
+            if (!_collection) {
+                result->setError(
+                        toWriteError(Status(ErrorCodes::InternalError,
+                                            "could not create collection " + request->getNS())));
+                return false;
+            }
+        }
+        return true;
+    }
+
+    bool WriteBatchExecutor::ExecInsertsState::lockAndCheck(WriteOpResult* result) {
+        if (_lockAndCheckImpl(result))
+            return true;
+        unlock();
+        return false;
+    }
+
+    void WriteBatchExecutor::ExecInsertsState::unlock() {
+        _collection = NULL;
+        _context.reset();
+        _writeLock.reset();
+    }
+
+    static void insertOne(WriteBatchExecutor::ExecInsertsState* state, WriteOpResult* result) {
+        invariant(state->currIndex < state->normalizedInserts.size());
+        const StatusWith<BSONObj>& normalizedInsert(state->normalizedInserts[state->currIndex]);
+
+        if (!normalizedInsert.isOK()) {
+            result->setError(toWriteError(normalizedInsert.getStatus()));
+            return;
+        }
+
+        const BSONObj& insertDoc = normalizedInsert.getValue().isEmpty() ?
+            state->request->getInsertRequest()->getDocumentsAt( state->currIndex ) :
+            normalizedInsert.getValue();
+
+        PageFaultRetryableSection pageFaultSection;
+        while (true) {
+            try {
+                if (!state->lockAndCheck(result)) {
+                    break;
+                }
+
+                if (!state->request->isInsertIndexRequest()) {
+                    singleInsert(insertDoc, state->getCollection(), result);
+                }
+                else {
+                    singleCreateIndex(insertDoc, state->getCollection(), result);
+                }
+                break;
+            }
+            catch (const DBException& ex) {
+                Status status(ex.toStatus());
+                if (ErrorCodes::isInterruption(status.code()))
+                    throw;
+                result->setError(toWriteError(status));
+                break;
+            }
+            catch (PageFaultException& pfe) {
+                state->unlock();
+                pfe.touch();
+                continue;  // Try the operation again.
+            }
+            fassertFailed(0);
+        }
+
+        // Errors release the write lock, as a matter of policy.
+        if (result->getError())
+            state->unlock();
+    }
+
+    void WriteBatchExecutor::execOneInsert(ExecInsertsState* state, WriteErrorDetail** error) {
+        BatchItemRef currInsertItem(state->request, state->currIndex);
+        scoped_ptr<CurOp> currentOp(beginCurrentOp(_client, currInsertItem));
+        incOpStats(currInsertItem);
+
+        WriteOpResult result;
+        insertOne(state, &result);
+
+        if (state->hasLock()) {
+            // Normally, unlocking records lock time stats on the active CurOp.  However,
+            // insertOne() may not release the lock. In that case, record time by hand.
+            state->getLock().recordTime();
+            // If we deschedule here, there could be substantial unaccounted locked time.
+            // Any time from here will be attributed to the next insert in the batch, or
+            // not attributed to any operation if this is the last op in the batch.
+            state->getLock().resetTime();
+        }
+
+        incWriteStats(currInsertItem,
+                      result.getStats(),
+                      result.getError(),
+                      currentOp.get());
+        finishCurrentOp(_client, currentOp.get(), result.getError());
+
+        if (result.getError()) {
+            *error = result.releaseError();
+        }
+    }
+
     /**
      * Perform a single insert into a collection.  Requires the insert be preprocessed and the
      * collection already has been created.
      *
      * Might fault or error, otherwise populates the result.
      */
-    static void singleInsert( const BatchItemRef& insertItem,
-                              const BSONObj& normalInsert,
+    static void singleInsert( const BSONObj& docToInsert,
                               Collection* collection,
                               WriteOpResult* result ) {
 
-        const string& insertNS = insertItem.getRequest()->getNS();
+        const string& insertNS = collection->ns().ns();
 
         Lock::assertWriteLocked( insertNS );
 
-        try {
+        StatusWith<DiskLoc> status = collection->insertDocument( docToInsert, true );
 
-            // XXX - are we 100% sure that all !OK statuses do not write a document?
-            StatusWith<DiskLoc> status = collection->insertDocument( normalInsert, true );
-
-            if ( !status.isOK() ) {
-                result->error = toWriteError( status.getStatus() );
-            }
-            else {
-                logOp( "i", insertNS.c_str(), normalInsert );
-                getDur().commitIfNeeded();
-                result->stats.n = 1;
-            }
+        if ( !status.isOK() ) {
+            result->setError(toWriteError(status.getStatus()));
         }
-        catch ( const PageFaultException& ex ) {
-            // TODO: An actual data structure that's not an exception for this
-            result->fault = new PageFaultException( ex );
+        else {
+            logOp( "i", insertNS.c_str(), docToInsert );
+            getDur().commitIfNeeded();
+            result->getStats().n = 1;
         }
-        catch ( const DBException& ex ) {
-            Status status(ex.toStatus());
-            if (ErrorCodes::isInterruption(status.code())) {
-                throw;
-            }
-            result->error = toWriteError(status);
-        }
-
     }
 
     /**
@@ -1027,40 +1052,25 @@ namespace mongo {
      *
      * Might fault or error, otherwise populates the result.
      */
-    static void singleCreateIndex( const BatchItemRef& insertItem,
-                                   const BSONObj& normalIndexDesc,
+    static void singleCreateIndex( const BSONObj& indexDesc,
                                    Collection* collection,
                                    WriteOpResult* result ) {
 
-        const string& indexNS = insertItem.getRequest()->getNS();
+        const string& indexNS = collection->ns().ns();
 
         Lock::assertWriteLocked( indexNS );
 
-        try {
+        Status status = collection->getIndexCatalog()->createIndex( indexDesc, true );
 
-            Status status = collection->getIndexCatalog()->createIndex( normalIndexDesc, true );
-
-            if ( status.code() == ErrorCodes::IndexAlreadyExists ) {
-                result->stats.n = 0;
-            }
-            else if ( !status.isOK() ) {
-                result->error = toWriteError( status );
-            }
-            else {
-                logOp( "i", indexNS.c_str(), normalIndexDesc );
-                result->stats.n = 1;
-            }
+        if ( status.code() == ErrorCodes::IndexAlreadyExists ) {
+            result->getStats().n = 0;
         }
-        catch ( const PageFaultException& ex ) {
-            // TODO: An actual data structure that's not an exception for this
-            result->fault = new PageFaultException( ex );
+        else if ( !status.isOK() ) {
+            result->setError(toWriteError(status));
         }
-        catch ( const DBException& ex ) {
-            Status status = ex.toStatus();
-            if (ErrorCodes::isInterruption(status.code())) {
-                throw;
-            }
-            result->error = toWriteError(status);
+        else {
+            logOp( "i", indexNS.c_str(), indexDesc );
+            result->getStats().n = 1;
         }
     }
 
@@ -1080,7 +1090,7 @@ namespace mongo {
         UpdateExecutor executor(&request, &cc().curop()->debug());
         Status status = executor.prepare();
         if (!status.isOK()) {
-            result->error = toWriteError(status);
+            result->setError(toWriteError(status));
             return;
         }
 
@@ -1088,7 +1098,7 @@ namespace mongo {
         Lock::DBWrite writeLock( nsString.ns() );
         ///////////////////////////////////////////
 
-        if ( !checkShardVersion( &shardingState, *updateItem.getRequest(), &result->error ) )
+        if ( !checkShardVersion( &shardingState, *updateItem.getRequest(), result ) )
             return;
 
         Client::Context ctx( nsString.ns(),
@@ -1105,16 +1115,16 @@ namespace mongo {
             // We have an _id from an insert
             const bool didInsert = !resUpsertedID.isEmpty();
 
-            result->stats.nModified = didInsert ? 0 : numDocsModified;
-            result->stats.n = didInsert ? 1 : numMatched;
-            result->stats.upsertedID = resUpsertedID;
+            result->getStats().nModified = didInsert ? 0 : numDocsModified;
+            result->getStats().n = didInsert ? 1 : numMatched;
+            result->getStats().upsertedID = resUpsertedID;
         }
         catch (const DBException& ex) {
             status = ex.toStatus();
             if (ErrorCodes::isInterruption(status.code())) {
                 throw;
             }
-            result->error = toWriteError(status);
+            result->setError(toWriteError(status));
         }
     }
 
@@ -1136,12 +1146,9 @@ namespace mongo {
         DeleteExecutor executor( &request );
         Status status = executor.prepare();
         if ( !status.isOK() ) {
-            result->error = toWriteError( status );
+            result->setError(toWriteError(status));
             return;
         }
-
-        // NOTE: Deletes will not fault outside the lock once any data has been written
-        PageFaultRetryableSection pFaultSection;
 
         ///////////////////////////////////////////
         Lock::DBWrite writeLock( nss.ns() );
@@ -1149,7 +1156,7 @@ namespace mongo {
 
         // Check version once we're locked
 
-        if ( !checkShardVersion( &shardingState, *removeItem.getRequest(), &result->error ) ) {
+        if ( !checkShardVersion( &shardingState, *removeItem.getRequest(), result ) ) {
             // Version error
             return;
         }
@@ -1161,18 +1168,14 @@ namespace mongo {
                                       false /* don't check version */);
 
         try {
-            result->stats.n = executor.execute();
-        }
-        catch ( const PageFaultException& ex ) {
-            // TODO: An actual data structure that's not an exception for this
-            result->fault = new PageFaultException( ex );
+            result->getStats().n = executor.execute();
         }
         catch ( const DBException& ex ) {
             status = ex.toStatus();
             if (ErrorCodes::isInterruption(status.code())) {
                 throw;
             }
-            result->error = toWriteError(status);
+            result->setError(toWriteError(status));
         }
     }
 
