jstests/core/profile4.js
@@ -53,13 +53,7 @@ try {
 
     // check write lock stats are set
     o = lastOp();
-    if (db.getMongo().writeMode() == 'commands') {
-        // insert write commands are profiled both as individual inserts and as a write command
-        assert.eq('command', o.op);
-    } 
-    else {
-        assert.eq('insert', o.op);
-    }
+    assert.eq('insert', o.op);
 
     assert.eq( 0, o.lockStats.timeLockedMicros.r );
     assert.lt( 0, o.lockStats.timeLockedMicros.w );
